Fix post-it title layout issue

--- a/grails-app/assets/stylesheets/app/postits.less
+++ b/grails-app/assets/stylesheets/app/postits.less
@@ -445,7 +445,7 @@
           display: block; /* Fallback for non-webkit */
           display: -webkit-box;
           max-width: 400px;
-          height: @font-size-postit-sm*@line-height-postit-sm*@lines-to-show-postit-sm; /* Fallback for non-webkit */
+          height: @font-size-postit-sm*@line-height-postit-sm*@lines-to-show-postit-sm + 3; /* Fallback for non-webkit */
           margin: 0 auto;
           font-size: @font-size-postit-sm;
           line-height: @line-height-postit-sm;
@@ -456,7 +456,7 @@
           padding-top: 2px;
           white-space: normal;
         }
-        height: @font-size-postit-sm*@line-height-postit-sm*@lines-to-show-postit-sm;
+        height: @font-size-postit-sm*@line-height-postit-sm*@lines-to-show-postit-sm + 3;
         padding-left: 5px;
         padding-right: 5px;
       }
